--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,10 @@
 
     <button id="test"> TEST </button>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0/axios.min.js"
+        integrity="sha512-26uCxGyoPL1nESYXHQ+KUmm3Maml7MEQNWU8hIt1hJaZa5KQAQ5ehBqK6eydcCOh6YAuZjV3augxu/5tY4fsgQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="./index.js"></script>
   </body>
 
